fix: body overflow x hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
 
   body {
     position: relative;
+    overflow-x: hidden;
     height: 100vh;
     background-color: rgba(43, 45, 66, 1);
   }
